--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-images": "^1.1.7",
+    "react-loader-spinner": "^3.1.14",
+    "react-medium-image-zoom": "^4.3.1",
+    "react-modal-image": "^2.5.0",
+    "react-responsive-modal": "^5.1.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
